src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__env2__chdir.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"env2 --chdir mydir env2\")?"
---
env2 --chdir mydir env2

0   4   `env2`   CALLABLE `env2`
4   7   ` --`    punctuation.definition.parameter
7   12  `chdir`  variable.parameter.option
13  18  `mydir`  meta.function-call.arguments + dynamic.path.directory.complete
19  23  `env2`   CALLABLE `env2`
